345 (2)/_nml.output
Terminals unused in grammar

   ACTION
   BYPASS
   CASE
   CHESS_VIEW
   DEFAULT
   ELSE
   FU
   HW_INIT
   HW_STALL
   IF
   OTHERS
   PROPERTIES
   PROPERTY
   READ_ACTION
   RSRC
   STAGE
   SW_STALL
   SWITCH
   VALUE
   WORDS
   WRITE_ACTION
   WRITE_VALUE
   ARBITARY_ORDER
   PRIMITIVE
   DOLLAR
   OP_AND_RULE
   RULE_REF
   CHESS
   AND
   OR
   EQU
   NEQU
   LESSE
   GRTE
   NOT
   DELAY
   MODE_AND_NAME


State 0 conflicts: 10 shift/reduce
State 12 conflicts: 12 shift/reduce
State 32 conflicts: 1 reduce/reduce
State 257 conflicts: 11 reduce/reduce
State 264 conflicts: 1 shift/reduce
State 365 conflicts: 1 reduce/reduce


Grammar

    0 $accept: nml_description $end

    1 nml_description: Declaration_list Rule_list

    2 Rule_list: Rule
    3          | Rule_list Rule

    4 Rule: Op_rule
    5     | Mode_rule

    6 Op_rule: Or_op_rule
    7        | And_op_rule

    8 And_op_rule: OP Identifier LPAREN Parameter_declaration_list RPAREN LBRACE Syntax_attribute_list And_image_attribute_list RBRACE

    9 Syntax_attribute_list: /* empty */
   10                      | Syntax_attribute_list Syntax_attribute

   11 And_image_attribute_list: /* empty */
   12                         | And_image_attribute

   13 And_image_attribute: IMAGE COLON And_field_encoding_list Instr_properties_opt
   14                    | IMAGE COLON Instr_properties

   15 Instr_properties_opt: /* empty */
   16                     | COMMA Instr_properties

   17 Instr_properties: Instr_property
   18                 | Instr_properties COMMA Instr_property

   19 Instr_property: /* empty */
   20               | CYCLES LPAREN Integer_expression RPAREN
   21               | CYCLES LPAREN Integer_expression BITOR Integer_expression RPAREN
   22               | DELAY_SLOTS LPAREN Integer_expression RPAREN
   23               | CHESS_PC_OFFSET LPAREN Integer_expression RPAREN
   24               | CLASS LPAREN Identifier RPAREN

   25 And_field_encoding_list: And_field_encoding Enc_alias_opt And_field_encoding_list DCOLON And_field_encoding Enc_alias_opt

   26 Mode_rule: Or_mode_rule
   27          | And_mode_rule

   28 Parameter_declaration_list: Parameter_declaration
   29                           | Parameter_declaration_list COMMA Parameter_declaration

   30 Parameter_declaration: Op_rule_instant_name COLON OP_RULE_NAME

   31 Op_rule_instant_name: Identifier

   32 Or_op_rule: OP Identifier LPAREN Op_rule_name_list RPAREN LBRACE Or_image_attribute_list RBRACE

   33 Op_rule_name_list: OP_RULE_NAME
   34                  | Op_rule_name_list BITOR OP_RULE_NAME

   35 Or_image_attribute_list: Or_image_attribute

   36 And_mode_rule: MODE Identifier Class_access_opt LPAREN Parameter_declaration_list RPAREN LBRACE Syntax_attribute_list And_image_attribute_list RBRACE

   37 Class_access_opt: /* empty */
   38                 | Class_access

   39 Class_access: CLASS LPAREN Register_class_name RPAREN

   40 Register_class_name: Identifier

   41 Or_mode_rule: MODE Identifier Class_access_opt LPAREN Mode_rule_name_list RPAREN Exclusive_command_opt
   42             | MODE Identifier Class_access_opt LPAREN Mode_rule_name_list RPAREN Exclusive_command_opt LBRACE Or_image_attribute_list RBRACE

   43 Mode_rule_name_list: N_mode_rule_name
   44                    | Mode_rule_name_list BITOR N_mode_rule_name

   45 N_mode_rule_name: MODE_RULE_NAME

   46 Syntax_attribute: SYNTAX COLON Syntax_encoding_list SEMI

   47 Syntax_encoding_list: Syntax_encoding
   48                     | Syntax_encoding_list BITOR Syntax_encoding_list

   49 Syntax_encoding: Syntax_encoding_element
   50                | Syntax_encoding Syntax_encoding_element

   51 Syntax_encoding_element: String
   52                        | Rule_syntax_ref

   53 Rule_syntax_ref: Rule_instant_name Poi_syn_opt Syntax_nr_opt

   54 Poi_syn_opt: /* empty */
   55            | POINT SYNTAX

   56 Syntax_nr_opt: /* empty */
   57              | Syntax_nr

   58 Syntax_nr: POINT Integer

   59 And_field_encoding_list: And_field_encoding Enc_alias_opt
   60                        | And_field_encoding_list DCOLON And_field_encoding Enc_alias_opt

   61 And_field_encoding: String
   62                   | ENUM_NAME POINT Enum_element_name
   63                   | Rule_image_ref
   64                   | Cst_expression
   65                   | Cst_expression Bit_selection

   66 Rule_image_ref: Rule_instant_name Image_nr_opt

   67 Rule_instant_name: Identifier

   68 Image_nr_opt: /* empty */
   69             | Image_nr

   70 Image_nr: POINT Integer

   71 Enum_element_name: Identifier

   72 Cst_expression: Const_instant_name_Enum_instant_name
   73               | Integer
   74               | Cst_expression PLUS Cst_expression
   75               | Cst_expression MINUS Cst_expression
   76               | Cst_expression MUL Cst_expression
   77               | Cst_expression DIV Cst_expression
   78               | Cst_expression BITAND Cst_expression
   79               | Cst_expression BITOR Cst_expression
   80               | BITNEG Cst_expression
   81               | LBRACE Cst_expression RBRACE

   82 Const_instant_name_Enum_instant_name: Identifier

   83 Bit_selection: LBRACK Bit_kind_opt Integer_expression Bit_kind_opt RBRACK
   84              | LBRACK Bit_kind_opt Integer_expression DOUBLEDOT Integer_expression Bit_kind_opt RBRACK

   85 Bit_kind_opt: /* empty */

   86 Enc_alias_opt: /* empty */
   87              | Enc_alias

   88 Enc_alias: LESS ALIAS And_field_encoding GRT

   89 Or_image_attribute: IMAGE COMMA Or_encoding_list COLON

   90 Or_encoding_list: Or_field_encoding_list
   91                 | Or_encoding_list BITOR Or_field_encoding_list

   92 Or_field_encoding_list: Or_field_encoding
   93                       | Or_field_encoding_list DCOLON Or_field_encoding

   94 Or_field_encoding: Bit_string_literal
   95                  | ENUM_NAME POINT Enum_element_name
   96                  | Rule_image_ref

   97 Bit_string_literal: String

   98 Identifier: IDENTIFIER

   99 Integer: INT_CONST

  100 String: STRING_CONST

  101 Binary: BINARY_CONST

  102 Hex: HEX_CONST

  103 Declaration_list: Declaration
  104                 | Declaration_list Declaration

  105 Declaration: Number_declaration
  106            | Enum_declaration
  107            | Constant_declaration
  108            | Storage_declaration
  109            | Start_declaration

  110 Start_declaration: /* empty */
  111                  | START OP_RULE_NAME Exclusive_command_opt

  112 Exclusive_command_opt: /* empty */
  113                      | Exclusive_command

  114 Exclusive_command: IS_EXCLUSIVE
  115                  | MAKE_EXCLUSIVE

  116 Number_declaration: DEF Identifier ASSIGN Integer_expression SEMI

  117 Integer_expression: Integer_expression PLUS Integer_expression
  118                   | Integer_expression MINUS Integer_expression
  119                   | Integer_expression MUL Integer_expression
  120                   | Integer_expression DIV Integer_expression
  121                   | MINUS Integer_expression
  122                   | Integer_expression POW Integer_expression
  123                   | LPAREN Integer_expression RPAREN
  124                   | Integer
  125                   | NUMBER_NAME

  126 Enum_declaration: ENUM Identifier LBRACE Enum_list RBRACE

  127 Enum_list: Enum_element
  128          | Enum_list COMMA Enum_element

  129 Enum_element: Identifier Mnemonic_opt Init_opt

  130 Mnemonic_opt: /* empty */
  131             | STRING_CONST

  132 Init_opt: /* empty */
  133         | ASSIGN Integer_expression

  134 Constant_declaration: CST Identifier LESS TYPE_ID GRT Constant_value_opt SEMI

  135 Constant_value_opt: /* empty */
  136                   | ASSIGN Integer
  137                   | ASSIGN Binary
  138                   | ASSIGN Hex

  139 Storage_declaration: Memory_declaration
  140                    | Register_declaration
  141                    | Transitory_declaration
  142                    | Pipe_declaration
  143                    | Port_declaration
  144                    | Class_declaration

  145 Memory_declaration: MEM Identifier Valid_address_declaration LESS TYPE_ID COMMA Address_type GRT Alias_declaration_opt Read_access_transitory_list_opt Write_access_transitory_list_opt SEMI

  146 Register_declaration: REG Identifier Valid_address_declaration_opt LESS TYPE_ID COMMA Address_type GRT Field_names_opt Alias_declaration_opt Record_declaration_opt Read_access_transitory_list_opt Write_access_transitory_list_opt SEMI

  147 Transitory_declaration: TRN Identifier LESS TYPE_ID GRT Record_declaration_opt SEMI

  148 Pipe_declaration: PIPE Identifier LESS TYPE_ID GRT Record_declaration_opt SEMI

  149 Port_declaration: INPORT Identifier LESS TYPE_ID GRT Record_declaration_opt SEMI OUTPORT Identifier LESS TYPE_ID GRT Record_declaration_opt SEMI

  150 Class_declaration: CLASS Identifier Valid_address_declaration LESS TYPE_ID GRT Record_declaration SEMI

  151 Valid_address_declaration_opt: /* empty */
  152                              | Valid_address_declaration

  153 Valid_address_declaration: /* empty */
  154                          | LBRACK Address_range Address_step_opt RBRACK

  155 Address_range: Integer_expression
  156              | Integer_expression DOUBLEDOT Integer_expression

  157 Address_step_opt: /* empty */
  158                 | COMMA Integer_expression

  159 Address_type: TYPE_ID

  160 Alias_declaration_opt: /* empty */
  161                      | Alias_declaration

  162 Alias_declaration: ALIAS Identifier Align_opt
  163                  | ALIAS Identifier Offset_declaration

  164 Offset_declaration: LBRACK Integer_expression RBRACK

  165 Align_opt: /* empty */
  166          | ALIGN Integer_expression

  167 Record_declaration_opt: /* empty */
  168                       | Record_declaration

  169 Record_declaration: LBRACE Storage_element_list RBRACE

  170 Storage_element_list: Identifier SEMI
  171                     | Storage_element_list Identifier SEMI

  172 Field_names_opt: /* empty */
  173                | Field_names

  174 Field_names: SYNTAX LPAREN ENUM_NAME RPAREN
  175            | SYNTAX LPAREN String RPAREN

  176 Read_access_transitory_list_opt: /* empty */
  177                                | Read_access_transitory_list

  178 Write_access_transitory_list_opt: /* empty */
  179                                 | Write_access_transitory_list

  180 Read_access_transitory_list: READ LPAREN Access_transitory_list RPAREN

  181 Write_access_transitory_list: WRITE LPAREN Access_transitory_list RPAREN

  182 Access_transitory_list: /* empty */
  183                       | Access_transitory_list Access_transitory

  184 Access_transitory: Transitory_name_Pipe_name

  185 Transitory_name_Pipe_name: Identifier


Terminals, with rules where they appear

$end (0) 0
error (256)
ACTION (258)
ALIAS (259) 88 162 163
BYPASS (260)
CASE (261)
CHESS_PC_OFFSET (262) 23
CHESS_VIEW (263)
CST (264) 134
CYCLES (265) 20 21
DEFAULT (266)
DEF (267) 116
DELAY_SLOTS (268) 22
ELSE (269)
ENUM (270) 126
FU (271)
HW_INIT (272)
HW_STALL (273)
IF (274)
IMAGE (275) 13 14 89
INPORT (276) 149
MEM (277) 145
MODE (278) 36 41 42
OP (279) 8 32
OTHERS (280)
OUTPORT (281) 149
PIPE (282) 148
PROPERTIES (283)
PROPERTY (284)
READ_ACTION (285)
READ (286) 180
REG (287) 146
RSRC (288)
STAGE (289)
START (290) 111
SW_STALL (291)
SWITCH (292)
SYNTAX (293) 46 55 174 175
TRN (294) 147
VALUE (295)
WORDS (296)
WRITE_ACTION (297)
WRITE_VALUE (298)
WRITE (299) 181
ARBITARY_ORDER (300)
CLASS (301) 24 39 150
PRIMITIVE (302)
DOUBLEDOT (303) 84 156
DOLLAR (304)
DCOLON (305) 25 60 93
BITNEG (306) 80
IS_EXCLUSIVE (307) 114
MAKE_EXCLUSIVE (308) 115
OP_AND_RULE (309)
RULE_REF (310)
CHESS (311)
INT_CONST (312) 99
STRING_CONST (313) 100 131
BINARY_CONST (314) 101
HEX_CONST (315) 102
IDENTIFIER (316) 98
ASSIGN (317) 116 133 136 137 138
SEMI (318) 46 116 134 145 146 147 148 149 150 170 171
COLON (319) 13 14 30 46 89
COMMA (320) 16 18 29 89 128 145 146 158
LPAREN (321) 8 20 21 22 23 24 32 36 39 41 42 123 174 175 180 181
RPAREN (322) 8 20 21 22 23 24 32 36 39 41 42 123 174 175 180 181
LBRACE (323) 8 32 36 42 81 126 169
RBRACE (324) 8 32 36 42 81 126 169
LBRACK (325) 83 84 154 164
RBRACK (326) 83 84 154 164
AND (327)
OR (328)
EQU (329)
NEQU (330)
LESS (331) 88 134 145 146 147 148 149 150
LESSE (332)
GRT (333) 88 134 145 146 147 148 149 150
GRTE (334)
NOT (335)
POINT (336) 55 58 62 70 95
PLUS (337) 74 117
MINUS (338) 75 118 121
BITOR (339) 21 34 44 48 79 91
BITAND (340) 78
MUL (341) 76 119
DIV (342) 77 120
POW (343) 122
ALIGN (344) 166
DELAY (345)
ENUM_NAME (346) 62 95 174
MODE_AND_NAME (347)
MODE_RULE_NAME (348) 45
OP_RULE_NAME (349) 30 33 34 111
NUMBER_NAME (350) 125
TYPE_ID (351) 134 145 146 147 148 149 150 159
NEG (352)


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
nml_description (99)
    on left: 1, on right: 0
Rule_list (100)
    on left: 2 3, on right: 1 3
Rule (101)
    on left: 4 5, on right: 2 3
Op_rule (102)
    on left: 6 7, on right: 4
And_op_rule (103)
    on left: 8, on right: 7
Syntax_attribute_list (104)
    on left: 9 10, on right: 8 10 36
And_image_attribute_list (105)
    on left: 11 12, on right: 8 36
And_image_attribute (106)
    on left: 13 14, on right: 12
Instr_properties_opt (107)
    on left: 15 16, on right: 13
Instr_properties (108)
    on left: 17 18, on right: 14 16 18
Instr_property (109)
    on left: 19 20 21 22 23 24, on right: 17 18
And_field_encoding_list (110)
    on left: 25 59 60, on right: 13 25 60
Mode_rule (111)
    on left: 26 27, on right: 5
Parameter_declaration_list (112)
    on left: 28 29, on right: 8 29 36
Parameter_declaration (113)
    on left: 30, on right: 28 29
Op_rule_instant_name (114)
    on left: 31, on right: 30
Or_op_rule (115)
    on left: 32, on right: 6
Op_rule_name_list (116)
    on left: 33 34, on right: 32 34
Or_image_attribute_list (117)
    on left: 35, on right: 32 42
And_mode_rule (118)
    on left: 36, on right: 27
Class_access_opt (119)
    on left: 37 38, on right: 36 41 42
Class_access (120)
    on left: 39, on right: 38
Register_class_name (121)
    on left: 40, on right: 39
Or_mode_rule (122)
    on left: 41 42, on right: 26
Mode_rule_name_list (123)
    on left: 43 44, on right: 41 42 44
N_mode_rule_name (124)
    on left: 45, on right: 43 44
Syntax_attribute (125)
    on left: 46, on right: 10
Syntax_encoding_list (126)
    on left: 47 48, on right: 46 48
Syntax_encoding (127)
    on left: 49 50, on right: 47 50
Syntax_encoding_element (128)
    on left: 51 52, on right: 49 50
Rule_syntax_ref (129)
    on left: 53, on right: 52
Poi_syn_opt (130)
    on left: 54 55, on right: 53
Syntax_nr_opt (131)
    on left: 56 57, on right: 53
Syntax_nr (132)
    on left: 58, on right: 57
And_field_encoding (133)
    on left: 61 62 63 64 65, on right: 25 59 60 88
Rule_image_ref (134)
    on left: 66, on right: 63 96
Rule_instant_name (135)
    on left: 67, on right: 53 66
Image_nr_opt (136)
    on left: 68 69, on right: 66
Image_nr (137)
    on left: 70, on right: 69
Enum_element_name (138)
    on left: 71, on right: 62 95
Cst_expression (139)
    on left: 72 73 74 75 76 77 78 79 80 81, on right: 64 65 74 75 76
    77 78 79 80 81
Const_instant_name_Enum_instant_name (140)
    on left: 82, on right: 72
Bit_selection (141)
    on left: 83 84, on right: 65
Bit_kind_opt (142)
    on left: 85, on right: 83 84
Enc_alias_opt (143)
    on left: 86 87, on right: 25 59 60
Enc_alias (144)
    on left: 88, on right: 87
Or_image_attribute (145)
    on left: 89, on right: 35
Or_encoding_list (146)
    on left: 90 91, on right: 89 91
Or_field_encoding_list (147)
    on left: 92 93, on right: 90 91 93
Or_field_encoding (148)
    on left: 94 95 96, on right: 92 93
Bit_string_literal (149)
    on left: 97, on right: 94
Identifier (150)
    on left: 98, on right: 8 24 31 32 36 40 41 42 67 71 82 116 126
    129 134 145 146 147 148 149 150 162 163 170 171 185
Integer (151)
    on left: 99, on right: 58 70 73 124 136
String (152)
    on left: 100, on right: 51 61 97 175
Binary (153)
    on left: 101, on right: 137
Hex (154)
    on left: 102, on right: 138
Declaration_list (155)
    on left: 103 104, on right: 1 104
Declaration (156)
    on left: 105 106 107 108 109, on right: 103 104
Start_declaration (157)
    on left: 110 111, on right: 109
Exclusive_command_opt (158)
    on left: 112 113, on right: 41 42 111
Exclusive_command (159)
    on left: 114 115, on right: 113
Number_declaration (160)
    on left: 116, on right: 105
Integer_expression (161)
    on left: 117 118 119 120 121 122 123 124 125, on right: 20 21 22
    23 83 84 116 117 118 119 120 121 122 123 133 155 156 158 164 166
Enum_declaration (162)
    on left: 126, on right: 106
Enum_list (163)
    on left: 127 128, on right: 126 128
Enum_element (164)
    on left: 129, on right: 127 128
Mnemonic_opt (165)
    on left: 130 131, on right: 129
Init_opt (166)
    on left: 132 133, on right: 129
Constant_declaration (167)
    on left: 134, on right: 107
Constant_value_opt (168)
    on left: 135 136 137 138, on right: 134
Storage_declaration (169)
    on left: 139 140 141 142 143 144, on right: 108
Memory_declaration (170)
    on left: 145, on right: 139
Register_declaration (171)
    on left: 146, on right: 140
Transitory_declaration (172)
    on left: 147, on right: 141
Pipe_declaration (173)
    on left: 148, on right: 142
Port_declaration (174)
    on left: 149, on right: 143
Class_declaration (175)
    on left: 150, on right: 144
Valid_address_declaration_opt (176)
    on left: 151 152, on right: 146
Valid_address_declaration (177)
    on left: 153 154, on right: 145 150 152
Address_range (178)
    on left: 155 156, on right: 154
Address_step_opt (179)
    on left: 157 158, on right: 154
Address_type (180)
    on left: 159, on right: 145 146
Alias_declaration_opt (181)
    on left: 160 161, on right: 145 146
Alias_declaration (182)
    on left: 162 163, on right: 161
Offset_declaration (183)
    on left: 164, on right: 163
Align_opt (184)
    on left: 165 166, on right: 162
Record_declaration_opt (185)
    on left: 167 168, on right: 146 147 148 149
Record_declaration (186)
    on left: 169, on right: 150 168
Storage_element_list (187)
    on left: 170 171, on right: 169 171
Field_names_opt (188)
    on left: 172 173, on right: 146
Field_names (189)
    on left: 174 175, on right: 173
Read_access_transitory_list_opt (190)
    on left: 176 177, on right: 145 146
Write_access_transitory_list_opt (191)
    on left: 178 179, on right: 145 146
Read_access_transitory_list (192)
    on left: 180, on right: 177
Write_access_transitory_list (193)
    on left: 181, on right: 179
Access_transitory_list (194)
    on left: 182 183, on right: 180 181 183
Access_transitory (195)
    on left: 184, on right: 183
Transitory_name_Pipe_name (196)
    on left: 185, on right: 184


state 0

    0 $accept: . nml_description $end

    CST     shift, and go to state 1
    DEF     shift, and go to state 2
    ENUM    shift, and go to state 3
    INPORT  shift, and go to state 4
    MEM     shift, and go to state 5
    PIPE    shift, and go to state 6
    REG     shift, and go to state 7
    START   shift, and go to state 8
    TRN     shift, and go to state 9
    CLASS   shift, and go to state 10

    CST       [reduce using rule 110 (Start_declaration)]
    DEF       [reduce using rule 110 (Start_declaration)]
    ENUM      [reduce using rule 110 (Start_declaration)]
    INPORT    [reduce using rule 110 (Start_declaration)]
    MEM       [reduce using rule 110 (Start_declaration)]
    PIPE      [reduce using rule 110 (Start_declaration)]
    REG       [reduce using rule 110 (Start_declaration)]
    START     [reduce using rule 110 (Start_declaration)]
    TRN       [reduce using rule 110 (Start_declaration)]
    CLASS     [reduce using rule 110 (Start_declaration)]
    $default  reduce using rule 110 (Start_declaration)

    nml_description         go to state 11
    Declaration_list        go to state 12
    Declaration             go to state 13
    Start_declaration       go to state 14
    Number_declaration      go to state 15
    Enum_declaration        go to state 16
    Constant_declaration    go to state 17
    Storage_declaration     go to state 18
    Memory_declaration      go to state 19
    Register_declaration    go to state 20
    Transitory_declaration  go to state 21
    Pipe_declaration        go to state 22
    Port_declaration        go to state 23
    Class_declaration       go to state 24


state 1

  134 Constant_declaration: CST . Identifier LESS TYPE_ID GRT Constant_value_opt SEMI

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 26


state 2

  116 Number_declaration: DEF . Identifier ASSIGN Integer_expression SEMI

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 27


state 3

  126 Enum_declaration: ENUM . Identifier LBRACE Enum_list RBRACE

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 28


state 4

  149 Port_declaration: INPORT . Identifier LESS TYPE_ID GRT Record_declaration_opt SEMI OUTPORT Identifier LESS TYPE_ID GRT Record_declaration_opt SEMI

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 29


state 5

  145 Memory_declaration: MEM . Identifier Valid_address_declaration LESS TYPE_ID COMMA Address_type GRT Alias_declaration_opt Read_access_transitory_list_opt Write_access_transitory_list_opt SEMI

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 30


state 6

  148 Pipe_declaration: PIPE . Identifier LESS TYPE_ID GRT Record_declaration_opt SEMI

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 31


state 7

  146 Register_declaration: REG . Identifier Valid_address_declaration_opt LESS TYPE_ID COMMA Address_type GRT Field_names_opt Alias_declaration_opt Record_declaration_opt Read_access_transitory_list_opt Write_access_transitory_list_opt SEMI

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 32


state 8

  111 Start_declaration: START . OP_RULE_NAME Exclusive_command_opt

    OP_RULE_NAME  shift, and go to state 33


state 9

  147 Transitory_declaration: TRN . Identifier LESS TYPE_ID GRT Record_declaration_opt SEMI

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 34


state 10

  150 Class_declaration: CLASS . Identifier Valid_address_declaration LESS TYPE_ID GRT Record_declaration SEMI

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 35


state 11

    0 $accept: nml_description . $end

    $end  shift, and go to state 36


state 12

    1 nml_description: Declaration_list . Rule_list
  104 Declaration_list: Declaration_list . Declaration

    CST     shift, and go to state 1
    DEF     shift, and go to state 2
    ENUM    shift, and go to state 3
    INPORT  shift, and go to state 4
    MEM     shift, and go to state 5
    MODE    shift, and go to state 37
    OP      shift, and go to state 38
    PIPE    shift, and go to state 6
    REG     shift, and go to state 7
    START   shift, and go to state 8
    TRN     shift, and go to state 9
    CLASS   shift, and go to state 10

    CST     [reduce using rule 110 (Start_declaration)]
    DEF     [reduce using rule 110 (Start_declaration)]
    ENUM    [reduce using rule 110 (Start_declaration)]
    INPORT  [reduce using rule 110 (Start_declaration)]
    MEM     [reduce using rule 110 (Start_declaration)]
    MODE    [reduce using rule 110 (Start_declaration)]
    OP      [reduce using rule 110 (Start_declaration)]
    PIPE    [reduce using rule 110 (Start_declaration)]
    REG     [reduce using rule 110 (Start_declaration)]
    START   [reduce using rule 110 (Start_declaration)]
    TRN     [reduce using rule 110 (Start_declaration)]
    CLASS   [reduce using rule 110 (Start_declaration)]

    Rule_list               go to state 39
    Rule                    go to state 40
    Op_rule                 go to state 41
    And_op_rule             go to state 42
    Mode_rule               go to state 43
    Or_op_rule              go to state 44
    And_mode_rule           go to state 45
    Or_mode_rule            go to state 46
    Declaration             go to state 47
    Start_declaration       go to state 14
    Number_declaration      go to state 15
    Enum_declaration        go to state 16
    Constant_declaration    go to state 17
    Storage_declaration     go to state 18
    Memory_declaration      go to state 19
    Register_declaration    go to state 20
    Transitory_declaration  go to state 21
    Pipe_declaration        go to state 22
    Port_declaration        go to state 23
    Class_declaration       go to state 24


state 13

  103 Declaration_list: Declaration .

    $default  reduce using rule 103 (Declaration_list)


state 14

  109 Declaration: Start_declaration .

    $default  reduce using rule 109 (Declaration)


state 15

  105 Declaration: Number_declaration .

    $default  reduce using rule 105 (Declaration)


state 16

  106 Declaration: Enum_declaration .

    $default  reduce using rule 106 (Declaration)


state 17

  107 Declaration: Constant_declaration .

    $default  reduce using rule 107 (Declaration)


state 18

  108 Declaration: Storage_declaration .

    $default  reduce using rule 108 (Declaration)


state 19

  139 Storage_declaration: Memory_declaration .

    $default  reduce using rule 139 (Storage_declaration)


state 20

  140 Storage_declaration: Register_declaration .

    $default  reduce using rule 140 (Storage_declaration)


state 21

  141 Storage_declaration: Transitory_declaration .

    $default  reduce using rule 141 (Storage_declaration)


state 22

  142 Storage_declaration: Pipe_declaration .

    $default  reduce using rule 142 (Storage_declaration)


state 23

  143 Storage_declaration: Port_declaration .

    $default  reduce using rule 143 (Storage_declaration)


state 24

  144 Storage_declaration: Class_declaration .

    $default  reduce using rule 144 (Storage_declaration)


state 25

   98 Identifier: IDENTIFIER .

    $default  reduce using rule 98 (Identifier)


state 26

  134 Constant_declaration: CST Identifier . LESS TYPE_ID GRT Constant_value_opt SEMI

    LESS  shift, and go to state 48


state 27

  116 Number_declaration: DEF Identifier . ASSIGN Integer_expression SEMI

    ASSIGN  shift, and go to state 49


state 28

  126 Enum_declaration: ENUM Identifier . LBRACE Enum_list RBRACE

    LBRACE  shift, and go to state 50


state 29

  149 Port_declaration: INPORT Identifier . LESS TYPE_ID GRT Record_declaration_opt SEMI OUTPORT Identifier LESS TYPE_ID GRT Record_declaration_opt SEMI

    LESS  shift, and go to state 51


state 30

  145 Memory_declaration: MEM Identifier . Valid_address_declaration LESS TYPE_ID COMMA Address_type GRT Alias_declaration_opt Read_access_transitory_list_opt Write_access_transitory_list_opt SEMI

    LBRACK  shift, and go to state 52

    $default  reduce using rule 153 (Valid_address_declaration)

    Valid_address_declaration  go to state 53


state 31

  148 Pipe_declaration: PIPE Identifier . LESS TYPE_ID GRT Record_declaration_opt SEMI

    LESS  shift, and go to state 54


state 32

  146 Register_declaration: REG Identifier . Valid_address_declaration_opt LESS TYPE_ID COMMA Address_type GRT Field_names_opt Alias_declaration_opt Record_declaration_opt Read_access_transitory_list_opt Write_access_transitory_list_opt SEMI

    LBRACK  shift, and go to state 52

    LESS      reduce using rule 151 (Valid_address_declaration_opt)
    LESS      [reduce using rule 153 (Valid_address_declaration)]
    $default  reduce using rule 151 (Valid_address_declaration_opt)

    Valid_address_declaration_opt  go to state 55
    Valid_address_declaration      go to state 56


state 33

  111 Start_declaration: START OP_RULE_NAME . Exclusive_command_opt

    IS_EXCLUSIVE    shift, and go to state 57
    MAKE_EXCLUSIVE  shift, and go to state 58

    $default  reduce using rule 112 (Exclusive_command_opt)

    Exclusive_command_opt  go to state 59
    Exclusive_command      go to state 60


state 34

  147 Transitory_declaration: TRN Identifier . LESS TYPE_ID GRT Record_declaration_opt SEMI

    LESS  shift, and go to state 61


state 35

  150 Class_declaration: CLASS Identifier . Valid_address_declaration LESS TYPE_ID GRT Record_declaration SEMI

    LBRACK  shift, and go to state 52

    $default  reduce using rule 153 (Valid_address_declaration)

    Valid_address_declaration  go to state 62


state 36

    0 $accept: nml_description $end .

    $default  accept


state 37

   36 And_mode_rule: MODE . Identifier Class_access_opt LPAREN Parameter_declaration_list RPAREN LBRACE Syntax_attribute_list And_image_attribute_list RBRACE
   41 Or_mode_rule: MODE . Identifier Class_access_opt LPAREN Mode_rule_name_list RPAREN Exclusive_command_opt
   42             | MODE . Identifier Class_access_opt LPAREN Mode_rule_name_list RPAREN Exclusive_command_opt LBRACE Or_image_attribute_list RBRACE

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 63


state 38

    8 And_op_rule: OP . Identifier LPAREN Parameter_declaration_list RPAREN LBRACE Syntax_attribute_list And_image_attribute_list RBRACE
   32 Or_op_rule: OP . Identifier LPAREN Op_rule_name_list RPAREN LBRACE Or_image_attribute_list RBRACE

    IDENTIFIER  shift, and go to state 25

    Identifier  go to state 64


state 39

    1 nml_description: Declaration_list Rule_list .
    3 Rule_list: Rule_list . Rule

    MODE  shift, and go to state 37
    OP    shift, and go to state 38

    $default  reduce using rule 1 (nml_description)

    Rule           go to state 65
    Op_rule        go to state 41
    And_op_rule    go to state 42
    Mode_rule      go to state 43
    Or_op_rule     go to state 44
    And_mode_rule  go to state 45
    Or_mode_rule   go to state 46


state 40

    2 Rule_list: Rule .

    $default  reduce using rule 2 (Rule_list)


state 41

    4 Rule: Op_rule .

    $default  reduce using rule 4 (Rule)


state 42

    7 Op_rule: And_op_rule .

    $default  reduce using rule 7 (Op_rule)


state 43

    5 Rule: Mode_rule .

    $default  reduce using rule 5 (Rule)


state 44

    6 Op_rule: Or_op_rule .

    $default  reduce using rule 6 (Op_rule)


state 45

   27 Mode_rule: And_mode_rule .

    $default  reduce using rule 27 (Mode_rule)


state 46

   26 Mode_rule: Or_mode_rule .

    $default  reduce using rule 26 (Mode_rule)


state 47

  104 Declaration_list: Declaration_list Declaration .

    $default  reduce using rule 104 (Declaration_list)


state 48

  134 Constant_declaration: CST Identifier LESS . TYPE_ID GRT Constant_value_opt SEMI

    TYPE_ID  shift, and go to state 66


state 49

  116 Number_declaration: DEF Identifier ASSIGN . Integer_expression SEMI

    INT_CONST    shift, and go to state 67
    LPAREN       shift, and go to state 68
    MINUS        shift, and go to state 69
    NUMBER_NAME  shift, and go to state 70

    Integer             go to state 71
    Integer_expression  go to state 72


state 50

  126 Enum_declaration: ENUM Identifier LBRACE . Enum_list RBRACE

    IDENTIFIER  shift, and go to state 25

    Identifier    go to state 73
    Enum_list     go to state 74
    Enum_element  go to state 75


state 51

  149 Port_declaration: INPORT Identifier LESS . TYPE_ID GRT Record_declaration_opt SEMI OUTPORT Identifier LESS TYPE_ID GRT Record_declaration_opt SEMI

    TYPE_ID  shift, and go to state 76


state 52

  154 Valid_address_declaration: LBRACK . Address_range Address_step_opt RBRACK

    INT_CONST    shift, and go to state 67
    LPAREN       shift, and go to state 68
    MINUS        shift, and go to state 69
    NUMBER_NAME  shift, and go to state 70

    Integer             go to state 71
    Integer_expression  go to state 77
    Address_range       go to state 78


state 53

  145 Memory_declaration: MEM Identifier Valid_address_declaration . LESS TYPE_ID COMMA Address_type GRT Alias_declaration_opt Read_access_transitory_list_opt Write_access_transitory_list_opt SEMI

    LESS  shift, and go to state 79


state 54

  148 Pipe_declaration: PIPE Identifier LESS . TYPE_ID GRT Record_declaration_opt SEMI

    TYPE_ID  shift, and go to state 80


state 55

  146 Register_declaration: REG Identifier Valid_address_declaration_opt . LESS TYPE_ID COMMA Address_type GRT Field_names_opt Alias_declaration_opt Record_declaration_opt Read_access_transitory_list_opt Write_access_transitory_list_opt SEMI

    LESS  shift, and go to state 81


state 56

  152 Valid_address_declaration_opt: Valid_address_declaration .

    $default  reduce using rule 152 (Valid_address_declaration_opt)


state 57

  114 Exclusive_command: IS_EXCLUSIVE .

    $default  reduce using rule 114 (Exclusive_command)


state 58

  115 Exclusive_command: MAKE_EXCLUSIVE .

    $default  reduce using rule 115 (Exclusive_command)


state 59

  111 Start_declaration: START OP_RULE_NAME Exclusive_command_opt .

    $default  reduce using rule 111 (Start_declaration)


state 60
